# Trip-Planner-CrewAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/trip_planner_agent/: crew.py  main.py
src/trip_planner_agent/config/: agents.yaml  tasks.yaml
src/trip_planner_agent/tools/: currency_tool.py  tavily_tool.py
